# Nocturne

./: .gitignore  README.md  com.jeffser.Nocturne.yml  meson.build  nocturne-uninstalled  translation_tool.sh
data/: com.jeffser.Nocturne.gschema.xml  com.jeffser.Nocturne.metainfo.xml.in
po/: LINGUAS  POTFILES.in  ca.po  de.po  es.po  eu.po  nocturne.pot  ru.po  tr.po  zh_CN.po  zh_TW.po
src/: actions.py  constants.py  main.py  meson.build  nocturne.gresource.xml  nocturne.in  preferences.py  style.css  window.py
src/integrations/: __init__.py  base.py  discord_rpc.py  jellyfin.py  local.py  models.py  navidrome.py  secret.py
src/navidrome/: __init__.py  models.py  secret.py
src/ui/: preferences.blp  shortcuts-dialog.blp  window.blp
src/ui/album/: button.blp  page.blp
src/ui/artist/: page.blp  row.blp
src/ui/containers/: download_row.blp  downloads_queue_button.blp  page_dialog.blp
src/ui/pages/: albums.blp  albums_all.blp  artists.blp  home.blp  login.blp  playback.blp  playlists.blp  radios.blp  setup.blp  songs.blp  songs_all.blp  songs_starred.blp  welcome.blp
src/ui/playing/: control_page.blp  equalizer_page.blp  footer.blp  lyrics_page.blp  popout_window.blp
src/ui/playlist/: dialog.blp  page.blp  selector_row.blp
src/ui/song/: details_dialog.blp  queue.blp  row.blp
src/widgets/: __init__.py
src/widgets/album/: button.py  page.py  row.py
src/widgets/playing/: __init__.py  control_page.py  equalizer_page.py  footer.py  lyrics_page.py  meson.build  player.py  popout_window.py  queue_page.py  spectrum.py
stubs/gi/: repository.pyi
(+35 files in other folders)
