moduledir = get_option('prefix') / get_option('datadir') / meson.project_name() / 'nocturne' / 'widgets' / 'playing'

widgets = [
  '__init__.py',
  'footer.py',
  'control_page.py',
  'queue_page.py',
  'lyrics_page.py',
  'player.py',
  'popout_window.py',
  'volume_button.py',
  'playback_mode_button.py',
  'spectrum.py',
  'equalizer_page.py',
]

install_data(widgets, install_dir: moduledir)